--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,8 @@ zsdoc/data
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode,vim,macos,linux,zsh
 
 my_settings.py
+
+db_uploader.py
+
+users.csv
+
